[package]
name = "json-range-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5.6"
serde = "0.9"
serde_json = { version = "1.0.73", features = ["preserve_order"] }

serde_derive = "0.9"
